reate a handler function and a selectedCard state variable in App.js. The handler needs to make the ItemModal visible (see the next section) and assign the card that was clicked on to the selectedCard variable. Pass the handler to ItemCard. Pass the selectedCard variable to ItemModal. Use it to display the correct image and text

--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -13,6 +13,8 @@
 
 .modal_open {
   visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
 }
 .modal__title {
   margin: 0;
